[package]
authors = ["Jorge Aparicio <japaricious@gmail.com>"]
build = "build.rs"
description = "Fixed point arithmetic"
documentation = "https://docs.rs/fpa"
keywords = [
    "no-std",
    "fixed",
    "point",
    "arithmetic",
]
license = "MIT OR Apache-2.0"
name = "fpa"
repository = "https://github.com/japaric/fpa"
version = "0.1.0"

[dependencies]
typenum = "1.7.0"

[dependencies.cast]
default-features = false
version = "0.2.0"

[dev-dependencies]
quote = "0.4.2"
syn = "0.12.14"

[features]
const-fn = []
