[package]
authors = ["Jorge Aparicio <japaricious@gmail.com>"]
build = "build.rs"
description = "Fixed point arithmetic"
documentation = "https://docs.rs/fpa"
keywords = [
    "no-std",
    "fixed",
    "point",
    "arithmetic",
]
license = "MIT OR Apache-2.0"
name = "fpa"
repository = "https://github.com/japaric/fpa"
version = "0.1.0"

[dependencies]
num-traits = "0.2.2"
typenum = "1.7.0"

[dependencies.cast]
default-features = false
version = "0.2.0"

[build-dependencies]
quote = "0.4.2"
syn = "0.12.13"

[features]
const-fn = []
try-from = []
